--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Índice</title>
 </head>
-<body>
+<body style="display: flex; flex-direction: column;">
   <h1>Diseño de Interfaces Web, práctica 8: jQuery</h1>
   <h2>Índice de contenidos</h2>
   <a href="gestion-de-elementos/con-jquery/gestion-elementos-jquery.html">Gestión de elementos con jQuery</a>
